--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.8.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -47,6 +46,7 @@
     "postcss-url": "^7.2.1",
     "prettier": "^1.12.0",
     "rimraf": "^2.6.0",
+    "sass": "^1.50.1",
     "sass-loader": "^7.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
