--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.2",
     "vue-loader": "^13.7.3",
+    "vue-plugin-load-script": "^1.3.6",
     "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^3.12.0",
