--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "shelljs": "^0.8.5",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.2",
+    "vue-head": "^2.2.0",
     "vue-loader": "^15.10.0",
     "vue-plugin-load-script": "^1.3.6",
     "vue-style-loader": "^3.1.2",
