--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,9 @@
 {
   "presets": [
-    ["env", {
-      "modules": false,
-      "targets": {
-        "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
-      }
-    }],
-    "stage-2"
+    ["@babel/preset-env", {}]
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime"]
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    "@vue/babel-plugin-transform-vue-jsx"
+  ]
 }
