--- a/package.json
+++ b/package.json
@@ -5,62 +5,64 @@
   "author": "Muhammed Bacalan <muhammedbacalan@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack serve --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.7.8",
-    "vue-router": "^3.5.3"
+    "lazysizes": "^5.3.2",
+    "rellax": "^1.12.1"
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.8",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.1.0",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
+    "@babel/core": "^7.18.10",
+    "@babel/eslint-parser": "^7.18.9",
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-stage-2": "^7.8.3",
+    "@soda/friendly-errors-webpack-plugin": "^1.8.1",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
+    "@vue/babel-plugin-transform-vue-jsx": "^1.2.1",
+    "autoprefixer": "^10.4.8",
+    "babel-loader": "^8.2.5",
     "chalk": "^4.1.2",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-prettier": "^2.7.0",
-    "eslint-plugin-vue": "^4.7.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^2.0.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^2.30.1",
+    "copy-webpack-plugin": "^6.4.1",
+    "css-loader": "^5.2.7",
+    "eslint": "^8.21.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.3.0",
+    "eslint-webpack-plugin": "^2.7.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.2",
+    "mini-css-extract-plugin": "^1.6.2",
     "node-notifier": "^10.0.1",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "ora": "^5.4.1",
-    "portfinder": "^1.0.28",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-url": "^8.0.0",
-    "prettier": "^2.6.2",
+    "portfinder": "^1.0.29",
+    "postcss": "^8.4.16",
+    "postcss-import": "^14.1.0",
+    "postcss-loader": "^4.3.0",
+    "postcss-url": "^10.1.3",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "sass": "^1.50.1",
-    "sass-loader": "^7.3.1",
+    "sass": "^1.54.4",
+    "sass-loader": "^10.3.1",
     "semver": "^7.3.7",
     "shelljs": "^0.8.5",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "^1.1.2",
-    "vue-head": "^2.2.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^4.1.1",
+    "vue": "^2.7.8",
+    "vue-eslint-parser": "^9.0.3",
     "vue-loader": "^15.10.0",
-    "vue-plugin-load-script": "^1.3.6",
-    "vue-style-loader": "^3.1.2",
+    "vue-router": "^3.5.4",
+    "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.8",
-    "webpack": "^3.12.0",
+    "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^3.11.3",
+    "webpack-merge": "^4.1.5"
   },
   "engines": {
     "node": ">= 12.13.0",
