--- a/package.json
+++ b/package.json
@@ -27,30 +27,30 @@
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "chalk": "^4.1.2",
-    "copy-webpack-plugin": "^6.4.1",
-    "css-loader": "^5.2.7",
+    "copy-webpack-plugin": "^10.2.4",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "eslint": "^8.21.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.3.0",
-    "eslint-webpack-plugin": "^2.7.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.2",
-    "mini-css-extract-plugin": "^1.6.2",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "node-notifier": "^10.0.1",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "ora": "^5.4.1",
     "portfinder": "^1.0.29",
     "postcss": "^8.4.16",
     "postcss-import": "^14.1.0",
-    "postcss-loader": "^4.3.0",
+    "postcss-loader": "^7.0.1",
     "postcss-url": "^10.1.3",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "sass": "^1.54.4",
-    "sass-loader": "^10.3.1",
+    "sass-loader": "^12.6.0",
     "semver": "^7.3.7",
     "shelljs": "^0.8.5",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "terser-webpack-plugin": "^5.3.3",
     "url-loader": "^4.1.1",
     "vue": "^2.7.8",
     "vue-eslint-parser": "^9.0.3",
@@ -58,14 +58,14 @@
     "vue-router": "^3.5.4",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.8",
-    "webpack": "^4.46.0",
+    "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.0",
     "webpack-merge": "^4.1.5"
   },
   "engines": {
-    "node": ">= 12.13.0",
+    "node": ">= 12.20.0",
     "npm": ">= 3.0.0"
   },
   "browserslist": [
